TPM-02-se realizo el listado de productos, ver un producto, crear un bono y ver todo los bonos, tambien se ralizo la validacion de tipo de usuario

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Tres-Pi-Medios</h1>
-    <ul>
-        <li>
-            <a href="/products">Listar todo los productos</a>
-        </li>
-    </ul>
+    <h1>Productos</h1>
 </body>
 </html>
